UX: Ensure suggestions are left aligned (#971)
This PR ensures that suggestions are aligned to the left. By default, they are center aligned which looks odd when there are long lines of text.

--- a/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
+++ b/assets/stylesheets/modules/ai-helper/common/ai-helper.scss
@@ -234,6 +234,10 @@
   z-index: z("composer", "dropdown");
 }
 
+.ai-suggestions-menu .btn {
+  text-align: left;
+}
+
 .mobile-view {
   .ai-category-suggester-content,
   .ai-tag-suggester-content,
